--- a/wiki/it/Macro_CloneConvert.html
+++ b/wiki/it/Macro_CloneConvert.html
@@ -187,11 +187,8 @@ km, hm, dam, m, dm, cm, <b>mm</b>, &micro;m, nm, inch, link, foot, yard, perch, 
 </p><p><span id="Revision"></span>
 </p>
 <h2><span class="mw-headline" id="Revisioni">Revisioni</span></h2>
-<div class="mw-translate-fuzzy">
 <p>01/06/2025 ver 00.16 sostituisce PySide2 con PySide aumenta mini e maxi cancella tutti i riferimenti a PySide, PySide2 e QtWidgets e corregge il clone, composto
-</p>
-</div>
-<p>06/06/2020 ver 0.15 = icon
+</p><p>06/06/2020 ver 0.15 = icon
 </p><p>20/05/2020 ver 0.14 = grid layout PySide2 Qt5
 </p><p>15/09/2019 ver 0.13 = replace the grec sign micro to "um", replace all "_translate("MainWindow", "mm", None)" to "mm" and comment line "text.encode('utf-8')" cause not work with FC 0.19 18.213
 </p><p>01/06/2019 ver 0.12 = adapted for 0.19 et correction "Copy:legacy=True" and ShapeColor .....
@@ -209,13 +206,13 @@ km, hm, dam, m, dm, cm, <b>mm</b>, &micro;m, nm, inch, link, foot, yard, perch, 
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260116164354
+Cached time: 20260116164408
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.043 seconds
-Real time usage: 0.069 seconds
-Preprocessor visited node count: 211/1000000
+CPU time usage: 0.040 seconds
+Real time usage: 0.060 seconds
+Preprocessor visited node count: 210/1000000
 Post&#8208;expand include size: 6442/2097152 bytes
 Template argument size: 1216/2097152 bytes
 Highest expansion depth: 5/100
@@ -225,14 +222,14 @@ Unstrip post&#8208;expand size: 2162/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   15.020      1 -total
- 30.78%    4.623      1 Template:Macro/it
- 27.25%    4.093      1 Template:Codeextralink
- 21.48%    3.226     12 Template:KEY
- 13.58%    2.040      1 Template:Clear
+100.00%   11.664      1 -total
+ 30.47%    3.554      1 Template:Macro/it
+ 23.03%    2.686      1 Template:Clear
+ 22.81%    2.660      1 Template:Codeextralink
+ 17.01%    1.984     12 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:28193-0!canonical and timestamp 20260116164353 and revision id 1739117. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:28193-0!canonical and timestamp 20260116164408 and revision id 1739119. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
