--- a/wiki/it/Macro_CloneConvert.html
+++ b/wiki/it/Macro_CloneConvert.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_CloneConvert.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Klon konvertieren (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_CloneConvert.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro CloneConvert (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_CloneConvert.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro CloneConvert (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_CloneConvert.html" class="mw-pt-progress mw-pt-progress--low" title="Makrodefinicja: Klonuj i konwertuj (4% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
@@ -172,9 +172,7 @@ km, hm, dam, m, dm, cm, <b>mm</b>, &micro;m, nm, inch, link, foot, yard, perch, 
 <li><b><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Reset</span>&nbsp;:</b> il pulsante Reset azzera tutti i valori</li>
 <li><b><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Quit</span>&nbsp;:</b> esce dalla macro</li></ul>
 <div style="clear:both"></div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <h2><span class="mw-headline" id="Script">Script</span></h2>
-</div>
 <p>Icona <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_CloneConvert.png&amp;filetimestamp=20150725195453&amp;.html" class="mw-file-description"><img src="../File/Macro_CloneConvert.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> 
 </p><p><b>Macro_CloneConvert.FCMacro</b>
 </p><p>Scaricare la macro da Gist <a rel="nofollow" class="external text" href="https://gist.github.com/mario52a/9f2f2f6144e1307a048f1840ef99300c">Macro_CloneConvert.FCMacro</a>
@@ -200,30 +198,30 @@ km, hm, dam, m, dm, cm, <b>mm</b>, &micro;m, nm, inch, link, foot, yard, perch, 
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260116164451
+Cached time: 20260116164457
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.035 seconds
-Real time usage: 0.046 seconds
-Preprocessor visited node count: 202/1000000
+CPU time usage: 0.040 seconds
+Real time usage: 0.064 seconds
+Preprocessor visited node count: 201/1000000
 Post&#8208;expand include size: 6442/2097152 bytes
 Template argument size: 1216/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2162/5000000 bytes
+Unstrip post&#8208;expand size: 2166/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    8.308      1 -total
- 38.52%    3.200      1 Template:Macro/it
- 25.77%    2.141      1 Template:Codeextralink
- 15.02%    1.248     12 Template:KEY
- 11.28%    0.937      1 Template:Clear
+100.00%   10.271      1 -total
+ 29.20%    2.999     12 Template:KEY
+ 26.05%    2.676      1 Template:Codeextralink
+ 24.91%    2.558      1 Template:Macro/it
+ 13.14%    1.350      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:28193-0!canonical and timestamp 20260116164451 and revision id 1739123. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:28193-0!canonical and timestamp 20260116164457 and revision id 1739125. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
