--- a/wiki/it/Macro_BOLTS.html
+++ b/wiki/it/Macro_BOLTS.html
@@ -1,9 +1,9 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro BOLTS/it</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="it" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Macro+BOLTS&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Macro_BOLTS.html" class="mw-pt-progress mw-pt-progress--med" title="Macro BOLTS (43% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Macro_BOLTS.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro BOLTS (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_BOLTS.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro BOLTS (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><a href="../fr/Macro_BOLTS.html" class="mw-pt-progress mw-pt-progress--med" title="Macro BOLTS (43% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="../fr/Macro_BOLTS.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro BOLTS (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
-<li><a href="../pl/Macro_BOLTS.html" class="mw-pt-progress mw-pt-progress--med" title="Makrodefinicja: BOLTS (43% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/Macro_BOLTS.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: BOLTS (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../cs/Macro_BOLTS.html" class="mw-pt-progress mw-pt-progress--med" title="Makro BOLTS (21% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
@@ -73,9 +73,11 @@ BOLTS
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr>
 </tbody></table>
-<h2><span class="mw-headline" id="Description">Description</span></h2>
-<div class="mw-translate-fuzzy">
+<p><span id="Description"></span>
+</p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
+<div class="mw-translate-fuzzy">
+<h2><span class="mw-headline" id="Descrizione_2">Descrizione</span></h2>
 <p>L'obiettivo di BOLTS &egrave; quello di costruire una libreria gratuita e open-source di Parti Standard per le applicazioni CAD. Il progetto fornisce un database comune utilizzabile da diverse applicazioni CAD, e sfrutta la potenza parametrica di FreeCAD per creare molte varianti con differenti dimensioni di una parte.
 </p>
 </div>
@@ -109,28 +111,28 @@ BOLTS
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20251121111639
+Cached time: 20260116164645
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.070 seconds
-Real time usage: 0.092 seconds
-Preprocessor visited node count: 95/1000000
+CPU time usage: 0.038 seconds
+Real time usage: 0.065 seconds
+Preprocessor visited node count: 96/1000000
 Post&#8208;expand include size: 2156/2097152 bytes
 Template argument size: 194/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1260/5000000 bytes
+Unstrip post&#8208;expand size: 1278/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    7.833      1 -total
- 75.21%    5.891      1 Template:Macro/it
- 23.13%    1.812      1 Template:Caption
+100.00%    9.735      1 -total
+ 64.62%    6.291      1 Template:Macro/it
+ 33.84%    3.294      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11397-0!canonical and timestamp 20251121111639 and revision id 1698117. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11397-0!canonical and timestamp 20260116164645 and revision id 1739127. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
