--- a/wiki/it/Macro_BOLTS.html
+++ b/wiki/it/Macro_BOLTS.html
@@ -93,10 +93,11 @@ BOLTS
 </div>
 <p>Il github fornisce anche un repo <a rel="nofollow" class="external text" href="https://github.com/boltsparts/BOLTSFC">BOLTSFC</a> che &egrave; direttamente installabile in FreeCAD..
 </p><p><b>nota</b>: BOLTSFC fa anche parte di <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD-addons">FreeCAD addons</a> e pu&ograve; essere installato dalla macro installatrice degli addons
+</p><p><span id="Usage"></span>
 </p>
-<h2><span class="mw-headline" id="Usage">Usage</span></h2>
-<div class="mw-translate-fuzzy">
 <h2><span class="mw-headline" id="Utilizzo">Utilizzo</span></h2>
+<div class="mw-translate-fuzzy">
+<h2><span class="mw-headline" id="Utilizzo_2">Utilizzo</span></h2>
 <p>Le istruzioni dettagliate si trovano nella <a rel="nofollow" class="external text" href="https://github.com/boltsparts/BOLTSFC/blob/master/README.md">Documentation section</a> della pagina web:
 </p>
 <ul><li>How to install BOLTS for FreeCAD</li>
@@ -111,13 +112,13 @@ BOLTS
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260116164652
+Cached time: 20260116164657
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.042 seconds
-Real time usage: 0.100 seconds
-Preprocessor visited node count: 96/1000000
+CPU time usage: 0.027 seconds
+Real time usage: 0.086 seconds
+Preprocessor visited node count: 97/1000000
 Post&#8208;expand include size: 2156/2097152 bytes
 Template argument size: 194/2097152 bytes
 Highest expansion depth: 5/100
@@ -127,12 +128,12 @@ Unstrip post&#8208;expand size: 1278/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   12.075      1 -total
- 57.04%    6.888      1 Template:Macro/it
- 41.25%    4.981      1 Template:Caption
+100.00%    8.873      1 -total
+ 58.03%    5.149      1 Template:Macro/it
+ 40.91%    3.630      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11397-0!canonical and timestamp 20260116164652 and revision id 1739127. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11397-0!canonical and timestamp 20260116164657 and revision id 1739130. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
