--- a/wiki/it/Macro_BOLTS.html
+++ b/wiki/it/Macro_BOLTS.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_BOLTS.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro BOLTS (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_BOLTS.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro BOLTS (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_BOLTS.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro BOLTS (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_BOLTS.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: BOLTS (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../cs/Macro_BOLTS.html" class="mw-pt-progress mw-pt-progress--med" title="Makro BOLTS (21% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
@@ -76,12 +76,8 @@ BOLTS
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
-<div class="mw-translate-fuzzy">
-<h2><span class="mw-headline" id="Descrizione_2">Descrizione</span></h2>
 <p>L'obiettivo di BOLTS &egrave; quello di costruire una libreria gratuita e open-source di Parti Standard per le applicazioni CAD. Il progetto fornisce un database comune utilizzabile da diverse applicazioni CAD, e sfrutta la potenza parametrica di FreeCAD per creare molte varianti con differenti dimensioni di una parte.
-</p>
-</div>
-<p>BOLTS fornisce un widget per FreeCAD che permette di inserire le parti nel documento attivo. I modelli e le dimensioni di una parte possono essere selezionate nel widget dove la parte &egrave; descritta da una etichetta.
+</p><p>BOLTS fornisce un widget per FreeCAD che permette di inserire le parti nel documento attivo. I modelli e le dimensioni di una parte possono essere selezionate nel widget dove la parte &egrave; descritta da una etichetta.
 </p><p><span typeof="mw:File"><a href="../index.php?title=Freecad-bearing.png&amp;filetimestamp=20131108132832&amp;.html" class="mw-file-description"><img src="../File/Freecad-bearing.png" decoding="async" width="480" height="264" class="mw-file-element" data-file-width="1920" data-file-height="1055"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Il widget BOLTS e un cuscinetto da BOLTS</p>
@@ -112,28 +108,28 @@ BOLTS
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260116164657
+Cached time: 20260116164723
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.027 seconds
-Real time usage: 0.086 seconds
-Preprocessor visited node count: 97/1000000
+CPU time usage: 0.032 seconds
+Real time usage: 0.078 seconds
+Preprocessor visited node count: 93/1000000
 Post&#8208;expand include size: 2156/2097152 bytes
 Template argument size: 194/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1278/5000000 bytes
+Unstrip post&#8208;expand size: 1279/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    8.873      1 -total
- 58.03%    5.149      1 Template:Macro/it
- 40.91%    3.630      1 Template:Caption
+100.00%    7.467      1 -total
+ 49.55%    3.700      1 Template:Macro/it
+ 49.14%    3.669      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11397-0!canonical and timestamp 20260116164657 and revision id 1739130. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11397-0!canonical and timestamp 20260116164723 and revision id 1739132. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
