--- a/wiki/it/Macro_BOLTS.html
+++ b/wiki/it/Macro_BOLTS.html
@@ -82,12 +82,8 @@ BOLTS
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Il widget BOLTS e un cuscinetto da BOLTS</p>
 <h2><span class="mw-headline" id="Script">Script</span></h2>
-<div class="mw-translate-fuzzy">
-<h2><span class="mw-headline" id="Script_2">Script</span></h2>
-<p>Maggiori informazioni su BOLTS si trovano sulla sua pagina web <a rel="nofollow" class="external text" href="https://www.bolts-library.org/en/index.html">www.bolts-library.org</a> e il suo github <a rel="nofollow" class="external text" href="https://github.com/boltsparts">https://github.com/boltsparts</a>.
-</p>
-</div>
-<p>Il github fornisce anche un repo <a rel="nofollow" class="external text" href="https://github.com/boltsparts/BOLTSFC">BOLTSFC</a> che &egrave; direttamente installabile in FreeCAD..
+<p>Ulteriori informazioni su BOLTS sono disponibili sulla sua pagina web <a rel="nofollow" class="external text" href="https://boltsparts.github.io/en/index.html">boltsparts.github.io</a> e sul suo github <a rel="nofollow" class="external text" href="https://github.com/boltsparts">https://github.com/boltsparts</a>
+</p><p>Il github fornisce anche un repo <a rel="nofollow" class="external text" href="https://github.com/boltsparts/BOLTSFC">BOLTSFC</a> che &egrave; direttamente installabile in FreeCAD..
 </p><p><b>nota</b>: BOLTSFC fa anche parte di <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD-addons">FreeCAD addons</a> e pu&ograve; essere installato dalla macro installatrice degli addons
 </p><p><span id="Usage"></span>
 </p>
@@ -108,13 +104,13 @@ BOLTS
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260116164723
+Cached time: 20260116164757
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.032 seconds
-Real time usage: 0.078 seconds
-Preprocessor visited node count: 93/1000000
+CPU time usage: 0.023 seconds
+Real time usage: 0.034 seconds
+Preprocessor visited node count: 89/1000000
 Post&#8208;expand include size: 2156/2097152 bytes
 Template argument size: 194/2097152 bytes
 Highest expansion depth: 5/100
@@ -124,12 +120,12 @@ Unstrip post&#8208;expand size: 1279/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    7.467      1 -total
- 49.55%    3.700      1 Template:Macro/it
- 49.14%    3.669      1 Template:Caption
+100.00%    2.959      1 -total
+ 62.08%    1.837      1 Template:Macro/it
+ 35.65%    1.055      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11397-0!canonical and timestamp 20260116164723 and revision id 1739132. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11397-0!canonical and timestamp 20260116164757 and revision id 1739134. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
