--- a/wiki/it/Macro_BOLTS.html
+++ b/wiki/it/Macro_BOLTS.html
@@ -88,14 +88,11 @@ BOLTS
 </p><p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilizzo">Utilizzo</span></h2>
-<div class="mw-translate-fuzzy">
-<h2><span class="mw-headline" id="Utilizzo_2">Utilizzo</span></h2>
 <p>Le istruzioni dettagliate si trovano nella <a rel="nofollow" class="external text" href="https://github.com/boltsparts/BOLTSFC/blob/master/README.md">Documentation section</a> della pagina web:
 </p>
-<ul><li>How to install BOLTS for FreeCAD</li>
-<li>How to setup a toolbar button for BOLTS</li>
-<li>How to use BOLTS for FreeCAD</li></ul>
-</div>
+<ul><li>Come installare BOLTS su FreeCAD</li>
+<li>Come impostare un pulsante della barra degli strumenti per BOLTS</li>
+<li>Come utilizzare BOLTS per FreeCAD</li></ul>
 <h2><span class="mw-headline" id="Contribute">Contribute</span></h2>
 <div class="mw-translate-fuzzy">
 <h2><span class="mw-headline" id="Contribuire">Contribuire</span></h2>
@@ -104,13 +101,13 @@ BOLTS
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260116164757
+Cached time: 20260116164911
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.023 seconds
-Real time usage: 0.034 seconds
-Preprocessor visited node count: 89/1000000
+CPU time usage: 0.027 seconds
+Real time usage: 0.043 seconds
+Preprocessor visited node count: 85/1000000
 Post&#8208;expand include size: 2156/2097152 bytes
 Template argument size: 194/2097152 bytes
 Highest expansion depth: 5/100
@@ -120,12 +117,12 @@ Unstrip post&#8208;expand size: 1279/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    2.959      1 -total
- 62.08%    1.837      1 Template:Macro/it
- 35.65%    1.055      1 Template:Caption
+100.00%    4.739      1 -total
+ 69.72%    3.304      1 Template:Macro/it
+ 28.55%    1.353      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11397-0!canonical and timestamp 20260116164757 and revision id 1739134. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11397-0!canonical and timestamp 20260116164911 and revision id 1739136. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
