--- a/wiki/it/Macro_BOLTS.html
+++ b/wiki/it/Macro_BOLTS.html
@@ -93,21 +93,23 @@ BOLTS
 <ul><li>Come installare BOLTS su FreeCAD</li>
 <li>Come impostare un pulsante della barra degli strumenti per BOLTS</li>
 <li>Come utilizzare BOLTS per FreeCAD</li></ul>
-<h2><span class="mw-headline" id="Contribute">Contribute</span></h2>
-<div class="mw-translate-fuzzy">
+<p><span id="Contribute"></span>
+</p>
 <h2><span class="mw-headline" id="Contribuire">Contribuire</span></h2>
+<div class="mw-translate-fuzzy">
+<h2><span class="mw-headline" id="Contribuire_2">Contribuire</span></h2>
 <p>Una libreria di Parti che sia utile per una vasta gamma di persone pu&ograve; essere realizzata solo attraverso uno sforzo della comunit&agrave;. Ci sono molte possibilit&agrave; e diversi modi per <a rel="nofollow" class="external text" href="https://boltsparts.github.io/en/contribute.html">contribuire</a> a BOLTS.
 </p>
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260116164911
+Cached time: 20260116164926
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.027 seconds
-Real time usage: 0.043 seconds
-Preprocessor visited node count: 85/1000000
+CPU time usage: 0.026 seconds
+Real time usage: 0.039 seconds
+Preprocessor visited node count: 86/1000000
 Post&#8208;expand include size: 2156/2097152 bytes
 Template argument size: 194/2097152 bytes
 Highest expansion depth: 5/100
@@ -117,12 +119,12 @@ Unstrip post&#8208;expand size: 1279/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    4.739      1 -total
- 69.72%    3.304      1 Template:Macro/it
- 28.55%    1.353      1 Template:Caption
+100.00%    3.877      1 -total
+ 62.45%    2.421      1 Template:Macro/it
+ 35.39%    1.372      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11397-0!canonical and timestamp 20260116164911 and revision id 1739136. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11397-0!canonical and timestamp 20260116164925 and revision id 1739138. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
