--- a/wiki/it/Macro_BOLTS.html
+++ b/wiki/it/Macro_BOLTS.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_BOLTS.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro BOLTS (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_BOLTS.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro BOLTS (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_BOLTS.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro BOLTS (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_BOLTS.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: BOLTS (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../cs/Macro_BOLTS.html" class="mw-pt-progress mw-pt-progress--med" title="Makro BOLTS (21% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
@@ -96,35 +96,32 @@ BOLTS
 <p><span id="Contribute"></span>
 </p>
 <h2><span class="mw-headline" id="Contribuire">Contribuire</span></h2>
-<div class="mw-translate-fuzzy">
-<h2><span class="mw-headline" id="Contribuire_2">Contribuire</span></h2>
 <p>Una libreria di Parti che sia utile per una vasta gamma di persone pu&ograve; essere realizzata solo attraverso uno sforzo della comunit&agrave;. Ci sono molte possibilit&agrave; e diversi modi per <a rel="nofollow" class="external text" href="https://boltsparts.github.io/en/contribute.html">contribuire</a> a BOLTS.
 </p>
-</div>
 <!-- 
 NewPP limit report
-Cached time: 20260116164926
+Cached time: 20260116164941
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.026 seconds
-Real time usage: 0.039 seconds
-Preprocessor visited node count: 86/1000000
+CPU time usage: 0.027 seconds
+Real time usage: 0.048 seconds
+Preprocessor visited node count: 82/1000000
 Post&#8208;expand include size: 2156/2097152 bytes
 Template argument size: 194/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1279/5000000 bytes
+Unstrip post&#8208;expand size: 1283/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    3.877      1 -total
- 62.45%    2.421      1 Template:Macro/it
- 35.39%    1.372      1 Template:Caption
+100.00%    6.729      1 -total
+ 61.30%    4.125      1 Template:Macro/it
+ 36.90%    2.483      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11397-0!canonical and timestamp 20260116164925 and revision id 1739138. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11397-0!canonical and timestamp 20260116164941 and revision id 1739140. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
