--- a/wiki/it/Macro_BOLTS.html
+++ b/wiki/it/Macro_BOLTS.html
@@ -88,7 +88,7 @@ BOLTS
 </p><p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilizzo">Utilizzo</span></h2>
-<p>Le istruzioni dettagliate si trovano nella <a rel="nofollow" class="external text" href="https://github.com/boltsparts/BOLTSFC/blob/master/README.md">Documentation section</a> della pagina web:
+<p>Le istruzioni dettagliate si trovano nella <a rel="nofollow" class="external text" href="https://github.com/boltsparts/BOLTSFC/blob/master/README.md">sezione di documentazione</a> della pagina web:
 </p>
 <ul><li>Come installare BOLTS su FreeCAD</li>
 <li>Come impostare un pulsante della barra degli strumenti per BOLTS</li>
@@ -100,12 +100,12 @@ BOLTS
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260116164941
+Cached time: 20260116165112
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.027 seconds
-Real time usage: 0.048 seconds
+CPU time usage: 0.031 seconds
+Real time usage: 0.063 seconds
 Preprocessor visited node count: 82/1000000
 Post&#8208;expand include size: 2156/2097152 bytes
 Template argument size: 194/2097152 bytes
@@ -116,12 +116,12 @@ Unstrip post&#8208;expand size: 1283/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    6.729      1 -total
- 61.30%    4.125      1 Template:Macro/it
- 36.90%    2.483      1 Template:Caption
+100.00%    6.194      1 -total
+ 67.02%    4.151      1 Template:Macro/it
+ 31.21%    1.933      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11397-0!canonical and timestamp 20260116164941 and revision id 1739140. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11397-0!canonical and timestamp 20260116165112 and revision id 1739142. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
