--- a/wiki/it/Macro_FCCircularText.html
+++ b/wiki/it/Macro_FCCircularText.html
@@ -1,10 +1,10 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro FCCircularText/it</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="it" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Macro+FCCircularText&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--high" title="Makro FC Zirkul&auml;rer Text (88% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--high" title="Makro FC Zirkul&auml;rer Text (89% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_FCCircularText.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro FCCircularText (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--med" title="Macro FCCircularText/es (34% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
-<li><a href="../fr/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--high" title="Macro CircularText (98% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="../fr/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro CircularText (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
-<li><a href="../pl/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--high" title="Makrodefinicja: FCCircularText (98% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
+<li><a href="../pl/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: FCCircularText (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -473,9 +473,7 @@ I comandi non utilizzabili con l'opzione scelta sono visualizzati in grigio.
 </div>
 <p><span id="Examples"></span>
 </p>
-<div class="mw-translate-fuzzy">
-<h2><span class="mw-headline" id="Esempio">Esempio</span></h2>
-</div>
+<h2><span class="mw-headline" id="Esempi">Esempi</span></h2>
 <center>
 <ul class="gallery mw-gallery-traditional">
 		<li class="gallerybox" style="width: 335px">
@@ -966,35 +964,35 @@ Modalit&agrave; rilievo:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111213526
+Cached time: 20260116165226
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.376 seconds
-Real time usage: 0.513 seconds
-Preprocessor visited node count: 1654/1000000
+CPU time usage: 0.402 seconds
+Real time usage: 0.704 seconds
+Preprocessor visited node count: 1653/1000000
 Post&#8208;expand include size: 41051/2097152 bytes
 Template argument size: 12614/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 10/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 66746/5000000 bytes
+Unstrip post&#8208;expand size: 66756/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  343.604      1 -total
-  2.66%    9.140      1 Template:Draft_Tools_navi/it
-  2.24%    7.703      1 Template:Userdocnavi/it
-  1.65%    5.674     19 Template:Clear
-  1.44%    4.953     10 Template:Code
-  1.26%    4.316      1 Template:Macro/it
-  1.14%    3.930      2 Template:Navigation_menu_2
-  1.14%    3.910     10 Template:CheckBox
-  0.91%    3.121      1 Template:Codeextralink
-  0.91%    3.110      3 Template:ColoredText
+100.00%  356.537      1 -total
+  3.80%   13.541      1 Template:Userdocnavi/it
+  3.55%   12.666      1 Template:Macro/it
+  3.35%   11.958      1 Template:Emphasis
+  3.09%   11.015      1 Template:Draft_Tools_navi/it
+  2.13%    7.586     19 Template:Clear
+  1.98%    7.063      2 Template:Navigation_menu_2
+  1.41%    5.020     10 Template:Code
+  1.19%    4.225      7 Template:RadioButton
+  1.12%    3.996      6 Template:SpinBox
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:39644-0!canonical and timestamp 20260111213525 and revision id 1736510. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:39644-0!canonical and timestamp 20260116165226 and revision id 1739144. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
